--- a/classificacao_roupas.ipynb
+++ b/classificacao_roupas.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carregando os dados"
+    "## Carregando os dados\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,19 +17,20 @@
     "from tensorflow import keras\n",
     "\n",
     "dataset = keras.datasets.fashion_mnist\n",
-    "((imagens_treino, identificacoes_treino), (imagens_teste, identificacoes_teste)) = dataset.load_data()"
+    "((imagens_treino, identificacoes_treino),\n",
+    " (imagens_teste, identificacoes_teste)) = dataset.load_data()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizando os dados"
+    "## Visualizando os dados\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1071,8 @@
     "\n",
     "map_classificacoes = {0: 'Camiseta', 1: 'Calça', 2: 'Pullover', 3: 'Vestido',\n",
     "                      4: 'Casaco', 5: 'Sandália', 6: 'Camisa', 7: 'Tênis', 8: 'Bolsa', 9: 'Bota'}\n",
-    "nome_classificacoes = [map_classificacoes[value] for value in identificacoes_treino]\n",
+    "nome_classificacoes = [map_classificacoes[value]\n",
+    "                       for value in identificacoes_treino]\n",
     "\n",
     "fig = px.imshow(imagens_treino[0:5], binary_string=True, facet_col=0)\n",
     "for i, a in enumerate(fig.layout.annotations):\n",
@@ -1083,22 +1085,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inicializando o modelo"
+    "## Treinando o modelo\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape = imagens_treino.shape[1:]\n",
+    "\n",
+    "# Normalização\n",
+    "imagens_treino = imagens_treino / float(255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_16\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_1\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_16\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_1\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1110,11 +1124,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ flatten_16 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Flatten</span>)            │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">784</span>)            │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "│ flatten_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Flatten</span>)             │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">784</span>)            │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_32 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">200,960</span> │\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">200,960</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_33 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">2,570</span> │\n",
+       "│ dense_3 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10</span>)             │         <span style=\"color: #00af00; text-decoration-color: #00af00\">2,570</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -1122,11 +1136,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ flatten_16 (\u001b[38;5;33mFlatten\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m784\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ flatten_1 (\u001b[38;5;33mFlatten\u001b[0m)             │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m784\u001b[0m)            │             \u001b[38;5;34m0\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_32 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m256\u001b[0m)            │       \u001b[38;5;34m200,960\u001b[0m │\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m256\u001b[0m)            │       \u001b[38;5;34m200,960\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_33 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10\u001b[0m)             │         \u001b[38;5;34m2,570\u001b[0m │\n",
+       "│ dense_3 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10\u001b[0m)             │         \u001b[38;5;34m2,570\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1171,66 +1185,49 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "shape = imagens_treino.shape[1:]\n",
-    "\n",
-    "modelo = keras.Sequential([\n",
-    "    keras.layers.Flatten(input_shape = shape),\n",
-    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
-    "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
-    "])\n",
-    "\n",
-    "modelo.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Treinando o modelo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalização\n",
-    "imagens_treino = imagens_treino / float(255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - loss: 0.6002\n"
+      "None\n",
+      "Epoch 1/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - loss: 0.6056\n",
+      "Epoch 2/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - loss: 0.3764\n",
+      "Epoch 3/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - loss: 0.3289\n",
+      "Epoch 4/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - loss: 0.3020\n",
+      "Epoch 5/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - loss: 0.2868\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x318d92d20>"
+       "<keras.src.callbacks.history.History at 0x11076f110>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "modelo = keras.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=shape),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+    "])\n",
+    "\n",
+    "print(modelo.summary())\n",
+    "\n",
     "modelo.compile(\n",
     "    loss = keras.losses.SparseCategoricalCrossentropy(),\n",
     "    optimizer = keras.optimizers.Adam()\n",
     ")\n",
-    "modelo.fit(imagens_treino, identificacoes_treino)"
+    "modelo.fit(imagens_treino, identificacoes_treino, epochs=5)"
    ]
   }
  ],
